--- a/src/app/empresas/empresas-list/empresas-list.component.html
+++ b/src/app/empresas/empresas-list/empresas-list.component.html
@@ -1,1 +1,15 @@
-<p>empresas-list works!</p>
+<section class="input-output-properties">
+
+    <article>
+      <!-- <app-tabela [valor]="valorInicial"
+        (mudouValor)="onMudouValor($event)"
+      ></app-tabela> -->
+  
+    </article>
+  </section>
+
+<h1>Componente principal</h1>
+<hr>
+
+
+<app-parente [emp]="empresa" (onAlert)="alerta($event)"></app-parente>
