--- a/src/app/acoes/acoes-list/acoes-list.component.html
+++ b/src/app/acoes/acoes-list/acoes-list.component.html
@@ -2,8 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-
-          <p class="text-titulo">Minhas Ações</p>
+          <app-titulo [nome]="titulo"></app-titulo>
           <button class="btn adicionar" (click)="novoCadastro()">Adicionar</button>
           <table class="table my-5">
             <thead>
@@ -60,3 +59,6 @@
 
     </div>
   </section>
+
+
+ 
