Adicionando configuração de deploy

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
 <h1 class="mt-4">Home</h1>
-    <ol class="breadcrumb mb-4">
+<ol class="breadcrumb mb-4">
     <li class="breadcrumb-item active">Bem vindo!!</li>
 </ol>
+
+<app-pipes-exemplos></app-pipes-exemplos>
+<app-observable-exemplo></app-observable-exemplo>
