--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,10 +4,10 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container">
-               <router-outlet></router-outlet>
+                <router-outlet></router-outlet>
             </div>
         </main>
-        
+
     </div>
 </div>
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
