--- a/src/app/template/navbar/navbar.component.html
+++ b/src/app/template/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header>
-    <div class="container">
-      <a href="/home">
-        <img src="./assets/logo_finanvest.png" alt="finanvest">
-      </a>
-    </div>
-  </header>
+  <div class="container">
+    <a href="/acoes/home">
+      <img src="./assets/logo_finanvest.png" alt="finanvest">
+    </a>
+  </div>
+</header>
